--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
             "cordova-plugin-camera": {}
         },
         "platforms": [
-            "android",
-            "browser"
+            "browser",
+            "android"
         ]
     }
 }
